updates and footer added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -16,9 +19,10 @@
     <!-- banner section start here -->
     <section class="banner-section">
         <div class="content">
-            <h1>Let’s Help Those Who Are<br>
+            <h1>Let's Help Those Who Are<br>
                 More In Need</h1>
-            <p>The value of life is not in its duration, but in its donation.<br> You are not important because of how long
+            <p>The value of life is not in its duration, but in its donation.<br> You are not important because of how
+                long
                 you live,<br> you are important because of how effective you live.</p>
             <a class="button" target="_blank" href="https://www.linkedin.com/in/mushrat-jahan-337759201/">Donate Now</a>
     </section>
@@ -27,27 +31,80 @@
     <section class="donate-information">
         <div class="donate-today">
             <h1>Donate Today</h1>
-            <p>If you want to donate,Then you need to select one ammount.<br>Also you can enter the ammount number in others section.</p>
+            <p>If you want to donate,Then you need to select one ammount.<br>Also you can enter the ammount number in
+                others section.</p>
         </div>
         <div class="donate-ammount">
-            <div class="container flex">
+            <div class="container1 flex">
                 <h3 class="container-btn">100tk</h3>
                 <h3 class="container-btn">200tk</h3>
                 <h3 class="container-btn">500tk</h3>
                 <h3 class="container-btn">1000tk</h3>
                 <h3 class="container-btn">5000tk</h3>
             </div>
-           <div class="other-ammount">
-              <input class="box" type="text" placeholder="Other Ammount(Taka)">
-           </div>
-           <hr>
-           <div class="donate-now">
-           <a class="button" href="">Donate Now</a>
-           </div>
+            <div class="other-ammount">
+                <input class="box" type="text" placeholder="Other Ammount(Taka)">
+            </div>
+            <hr>
+            <div class="donate-now">
+                <a class="button" href="">Donate Now</a>
+            </div>
         </div>
+    </section>
+
+    <!-- donate-plan section start here -->
+    <section class="donate-plan">
+        <div class="donate-plan-content">
+            <h2>Our Donate Plan</h2>
+            <p>Our motto is to help needy people. So our main plan is to give food and shelter to a family.<br> Also
+                ensure education for a child is also our motto.</p>
+        </div>
+        <div class="box-section container flex">
+            <div class="food-box">
+                <img src="icons/food.png" alt="">
+                <h3>Food for a family</h3>
+                <p>Amet minim mollit non deserunt
+                    ullamco est sit aliqua dolor do amet
+                    sint. Velit officia consequat duis enim
+                    velit mollit.</p>
+            </div>
+            <div class="shelter-box">
+            <img src="icons/shelter.png" alt="">
+            <h3>Shelter for a family</h3>
+            <p>Amet minim mollit non deserunt
+                ullamco est sit aliqua dolor do amet
+                sint. Velit officia consequat duis enim
+                velit mollit.</p>
+            </div>
+            <div class="edu-box">
+            <img src="icons/Frame-1.png" alt="">
+            <h3>Education for a child</h3>
+            <p>Amet minim mollit non deserunt
+                ullamco est sit aliqua dolor do amet
+                sint. Velit officia consequat duis enim
+                velit mollit.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- updates section start here -->
+    <section class="updates-section">
+        <div class="updates-content">
+           <h2>Get My Updates</h2>
+           <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli<br> deterruisset. No duo populo animal noluisse, enim</p>
+        </div>
+        <div class="subscribe-box">
+         <input class="add-email" type="text" placeholder="Email"><input class="submission" type="submit" value="Sunscribe">
+        </div>
+
     </section>
     </div>
 
 </body>
+<!-- footer starts here -->
+<footer>
+    <h2>Be Humble</h2>
+    <p>I'm gonna do it</p>
+</footer>
 
 </html>
