--- a/index.html
+++ b/index.html
@@ -69,20 +69,45 @@
                     velit mollit.</p>
             </div>
             <div class="shelter-box">
-            <img src="icons/shelter.png" alt="">
-            <h3>Shelter for a family</h3>
-            <p>Amet minim mollit non deserunt
-                ullamco est sit aliqua dolor do amet
-                sint. Velit officia consequat duis enim
-                velit mollit.</p>
+                <img src="icons/shelter.png" alt="">
+                <h3>Shelter for a family</h3>
+                <p>Amet minim mollit non deserunt
+                    ullamco est sit aliqua dolor do amet
+                    sint. Velit officia consequat duis enim
+                    velit mollit.</p>
             </div>
             <div class="edu-box">
-            <img src="icons/Frame-1.png" alt="">
-            <h3>Education for a child</h3>
-            <p>Amet minim mollit non deserunt
-                ullamco est sit aliqua dolor do amet
-                sint. Velit officia consequat duis enim
-                velit mollit.</p>
+                <img src="icons/Frame-1.png" alt="">
+                <h3>Education for a child</h3>
+                <p>Amet minim mollit non deserunt
+                    ullamco est sit aliqua dolor do amet
+                    sint. Velit officia consequat duis enim
+                    velit mollit.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- payment section starts here -->
+    <section class="payment-section">
+        <div class="payment-content">
+            <h2>Payment Method</h2>
+            <p>You can donate us via DBBL, Bkash, Nogod</p>
+        </div>
+        <div class="payment-box container flex">
+            <div class="bkash-box">
+                <img src="icons/bkash-removebg-preview.png" alt="">
+                <h4>Donate your money in bkash,please</h4>
+                <button class="click-button"><a target="_blank" href="https://www.bkash.com/">Click_Here</a></button>
+            </div>
+            <div class="nogod-box">
+                <img src="icons/Nagad-Logo.wine.png" alt="">
+                <h4>Donate your money in Nogod,please</h4>
+                <button class="click-button"><a target="_blank" href="https://nagad.com.bd/">Click_Here</a></button>
+            </div>
+            <div class="dbbl-box">
+                <img src="icons/dbbl.png" alt="">
+                <h4>Donate your money in DBBL,please</h4>
+                <button class="click-button"><a target="_blank" href="https://www.dutchbanglabank.com/">Click_Here</a></button>
             </div>
         </div>
     </section>
@@ -90,13 +115,14 @@
     <!-- updates section start here -->
     <section class="updates-section">
         <div class="updates-content">
-           <h2>Get My Updates</h2>
-           <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli<br> deterruisset. No duo populo animal noluisse, enim</p>
+            <h2>Get My Updates</h2>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli<br> deterruisset. No duo populo
+                animal noluisse, enim</p>
         </div>
         <div class="subscribe-box">
-         <input class="add-email" type="text" placeholder="Email"><input class="submission" type="submit" value="Sunscribe">
+            <input class="add-email" type="text" placeholder="Email"><input class="submission" type="submit"
+                value="Sunscribe">
         </div>
-
     </section>
     </div>
 
